first layout prototype

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,12 @@
-title=Title
+#tracking-processos-home
+title=BRF Tracking processos
 appTitle=tracking-processos-home
 appDescription=App Description
+
+#tracking-processos-mainlist
+mainlist-title=Processos compras
+mainlist-process=Processo
+mainlist-taskname=Etapa
+mainlist-priority=Prioridade
+mainlist-lastapprovaldate=Data \u00falt. Aprova\u00e7\u00e3o
+mainlist-estimatedenddate=Data prevista conclus\u00e3o
