--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,3 +10,13 @@ mainlist-taskname=Etapa
 mainlist-priority=Prioridade
 mainlist-lastapprovaldate=Data \u00falt. Aprova\u00e7\u00e3o
 mainlist-estimatedenddate=Data prevista conclus\u00e3o
+
+#tracking-processos-admin
+slaconfig-tablesuprimentos=Suprimentos
+slaconfig-tablesuprimentos-complexidade=Complexidade / Relev\u00e2ncia
+slaconfig-tablesuprimentos-processo=Processo
+slaconfig-tablesuprimentos-normal=Normal
+slaconfig-tablesuprimentos-urgente=Urgente
+slaconfig-tabledias=SLA por Dia
+slaconfig-tabledias-processo=Processo
+slaconfig-tabledias-dias=Dias
