--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,10 +6,12 @@ appDescription=App Description
 #tracking-processos-mainlist
 mainlist-title=Processos compras
 mainlist-process=Processo
-mainlist-taskname=Etapa
+mainlist-taskname=Etapa Atual
 mainlist-priority=Prioridade
 mainlist-lastapprovaldate=Data \u00falt. Aprova\u00e7\u00e3o
 mainlist-estimatedenddate=Data prevista conclus\u00e3o
+mainlist-lastupdate=Data \u00daltima atualiza\u00e7\u00e3o
+mainlist-responsavel=Respons\u00e1vel Atual
 
 #tracking-processos-admin
 slaconfig-tablesuprimentos=Suprimentos
