--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,6 +12,20 @@ mainlist-lastapprovaldate=Data \u00falt. Aprova\u00e7\u00e3o
 mainlist-estimatedenddate=Data prevista conclus\u00e3o
 mainlist-lastupdate=Data \u00daltima atualiza\u00e7\u00e3o
 mainlist-responsavel=Respons\u00e1vel Atual
+mainlist-meusprocessos=Meus Processos
+mainlist-srcriada=SR Criada
+mainlist-aprovacoes=Aprova\u00e7\u00f5es
+mainlist-suprimentos=Suprimentos
+mainlist-compliance=Compliance
+mainlist-juridico=Jur\u00eddico
+mainlist-areasolicitante=Aprv.\u00c1rea
+mainlist-controladoria=Controladoria
+mainlist-assinatura=Assinatura
+mainlist-ecc=Doc.ECC
+mainlist-concluido=Conclu\u00eddo
+mainlist-emandamento=Em Andamento
+mainlist-atrasado=Atrasado
+mainlist-urgente=Urgente
 
 #tracking-processos-admin
 slaconfig-tablesuprimentos=Suprimentos
