--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,12 +1,12 @@
 #tracking-processos-home
-title=BRF Tracking processos
+title=Tracking Processos Ariba
 appTitle=tracking-processos-home
 appDescription=App Description
 
 #tracking-processos-mainlist
 mainlist-title=Processos compras
 mainlist-process=Processo
-mainlist-taskname=Etapa Atual
+mainlist-actualtask=Etapa Atual
 mainlist-priority=Prioridade
 mainlist-lastapprovaldate=Data \u00falt. Aprova\u00e7\u00e3o
 mainlist-estimatedenddate=Data prevista conclus\u00e3o
@@ -26,6 +26,7 @@ mainlist-concluido=Conclu\u00eddo
 mainlist-emandamento=Em Andamento
 mainlist-atrasado=Atrasado
 mainlist-urgente=Urgente
+mainlist-description=Desrcri\u00e7\u00e3o
 
 #tracking-processos-admin
 slaconfig-tablesuprimentos=Suprimentos
